# BMS_Flask

./: .gitignore  LICENSE.md  README.md  app.py  config.py  main.py  pyproject.toml
auth/: __init__.py  decorators.py  login.py  responses.py  routes.py  tokens.py
db/: billing.py  connection.py  inventory.py  redis_client.py  users.py
routes/: billing.py  home.py  inventory.py  payment.py
static/js/: billing.js  dashboard.js  login.js  notification.js  qr.js  requests.js
static/styles/: billing.css  dashboard.css  login.css  notification.css  qr.css
templates/: billing.html  dashboard.html  login.html  qr.html
utils/: __init__.py  exceptions.py  misc.py  server.py  types.py
